src/objects/REVVY__MnQuoteItem__c.object
<CustomObject>
    <fields>
        <fullName>Abbrev__c</fullName>
        <label>Abbrev</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Cal__c</fullName>
        <label>Annual Cal</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Patient_Volumes__c</fullName>
        <label>Annual Patient Volumes</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_QC__c</fullName>
        <label>Annual QC</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Usage_Panel__c</fullName>
        <label>Annual Usage Panel</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Usage_Volumes__c</fullName>
        <label>Annual Usage Volumes</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cal_Point_Replicates__c</fullName>
        <label>Cal Point Replicates</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cal_Points__c</fullName>
        <label>Cal Points</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CalsPerYr__c</fullName>
        <label>Cals/Yr</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Category_Group_Quote__c</fullName>
        <formula>TEXT( REVVY__Catalog_Node__r.Discount_Category_Group__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Category Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Modified_Field__c</fullName>
        <description>Indicate which field(markup, Margin, or Final Transfer Price) distributor modifies in Override page</description>
        <label>Distributor Modified Field</label>
        <picklist>
            <picklistValues>
                <fullName>Margin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Markup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Transfer Price</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_SKU_Id__c</fullName>
        <label>Local SKU Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Discount__c</fullName>
        <label>Max Discount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinTestsPerYear__c</fullName>
        <label>MinTests/Year</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Discount__c</fullName>
        <label>Min Discount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfAnalyzers__c</fullName>
        <label># Analyzers</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfQCPerRun__c</fullName>
        <label>#QC/Run</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OASDays__c</fullName>
        <label>OASDays</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Accessory_Add_On__c</fullName>
        <description>Accessory Add On</description>
        <label>Accessory Add On</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Add_On_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Add-On Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Annual_Reportable_Result_Volume__c</fullName>
        <formula>Annual_Patient_Volumes__c  +  Annual_Usage_Panel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Reportable Result Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Attribute_Adjustment_Id__c</fullName>
        <label>Attribute Adjustment Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Below_Floor__c</fullName>
        <formula>IF(OCD_Overridden_Price__c  &lt;  OCD_Price_Floor__c/ OCD_Pr_Conversion_Factor_F__c , &quot;Y&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Below Floor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_CPRR_Base_Price__c</fullName>
        <formula>OCD_Overridden_Price__c * ( Annual_Usage_Volumes__c / OCD_Annual_Reportable_Result_Volume__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPRR Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_CPRR_Price__c</fullName>
        <label>Price with Add Ons</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Capital_Add_On__c</fullName>
        <description>Capital Add On</description>
        <label>Capital Add On</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Consumable_Add_On__c</fullName>
        <description>Consumable Add On</description>
        <label>Consumable Add On</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_CostPrice_Override__c</fullName>
        <label>Cost Override</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Distributor_Type__c</fullName>
        <label>Distributor Type</label>
        <picklist>
            <picklistValues>
                <fullName>Markup</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Margin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OCD_Equipment_Has_Accessories__c</fullName>
        <description>Indicates that equipment has Accessories if the value of this field is &gt; 0</description>
        <label>Equipment_Has_Accessories</label>
        <summaryFilterItems>
            <field>REVVY__MnQuoteItemSubLine__c.Product_Type__c</field>
            <operation>equals</operation>
            <value>Accessory</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>REVVY__MnQuoteItemSubLine__c.REVVY__Price__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>REVVY__MnQuoteItemSubLine__c.REVVY__QuoteItem__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OCD_Equipment_Has_Credits__c</fullName>
        <description>Indicates that equipment has Credits if the value of this field is &gt;0</description>
        <label>Equipment_Has_Credits</label>
        <summarizedField>REVVY__MnQuoteItemSubLine__c.Credit_Amount__c</summarizedField>
        <summaryForeignKey>REVVY__MnQuoteItemSubLine__c.REVVY__QuoteItem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OCD_Equipment_Has_Others__c</fullName>
        <description>Indicates that equipment has Others if the value of this field is &gt; 0</description>
        <label>Equipment_Has_Others</label>
        <summaryFilterItems>
            <field>REVVY__MnQuoteItemSubLine__c.Product_Type__c</field>
            <operation>equals</operation>
            <value>Other</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>REVVY__MnQuoteItemSubLine__c.REVVY__Price__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>REVVY__MnQuoteItemSubLine__c.REVVY__QuoteItem__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OCD_Equipment_Has_Service__c</fullName>
        <description>Indicates that equipment has Service if the value of this field is &gt; 0</description>
        <label>Equipment_Has Service</label>
        <summaryFilterItems>
            <field>REVVY__MnQuoteItemSubLine__c.Product_Type__c</field>
            <operation>equals</operation>
            <value>Service</value>
        </summaryFilterItems>
        <summaryForeignKey>REVVY__MnQuoteItemSubLine__c.REVVY__QuoteItem__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OCD_Equipment_Has_TradeIns__c</fullName>
        <description>Indicates that equipment has Trade-Ins if the value of this field is &gt; 0</description>
        <label>Equipment_Has_TradeIns</label>
        <summaryFilterItems>
            <field>REVVY__MnQuoteItemSubLine__c.Product_Type__c</field>
            <operation>equals</operation>
            <value>Trade-In</value>
        </summaryFilterItems>
        <summaryForeignKey>REVVY__MnQuoteItemSubLine__c.REVVY__QuoteItem__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OCD_Equipment_Has_Warranty__c</fullName>
        <description>Indicates that equipment has Warranty if the value of this field is &gt; 0</description>
        <label>Equipment_Has_Warranty</label>
        <summaryFilterItems>
            <field>REVVY__MnQuoteItemSubLine__c.Product_Type__c</field>
            <operation>equals</operation>
            <value>Warranty</value>
        </summaryFilterItems>
        <summaryForeignKey>REVVY__MnQuoteItemSubLine__c.REVVY__QuoteItem__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OCD_Equipment_Includes_Accessories__c</fullName>
        <description>Indicates that equipment price includes free accessories if the value of this field is &gt; 0</description>
        <label>Equipment Includes Accessories</label>
        <summaryFilterItems>
            <field>REVVY__MnQuoteItemSubLine__c.Product_Type__c</field>
            <operation>equals</operation>
            <value>Accessory</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>REVVY__MnQuoteItemSubLine__c.REVVY__Unit_Price__c</field>
            <operation>equals</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>REVVY__MnQuoteItemSubLine__c.REVVY__Price__c</field>
            <operation>equals</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>REVVY__MnQuoteItemSubLine__c.REVVY__QuoteItem__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OCD_Equipment_Includes_Others__c</fullName>
        <description>Indicates that equipment price includes free others if the value of this field is &gt; 0</description>
        <label>Equipment Includes Others</label>
        <summaryFilterItems>
            <field>REVVY__MnQuoteItemSubLine__c.Product_Type__c</field>
            <operation>equals</operation>
            <value>Other</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>REVVY__MnQuoteItemSubLine__c.REVVY__Unit_Price__c</field>
            <operation>equals</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>REVVY__MnQuoteItemSubLine__c.REVVY__Price__c</field>
            <operation>equals</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>REVVY__MnQuoteItemSubLine__c.REVVY__QuoteItem__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OCD_ExtId__c</fullName>
        <description>Used for cloning</description>
        <externalId>true</externalId>
        <label>OCD_ExtId</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OCD_Final_Price__c</fullName>
        <formula>OCD_Overridden_Price__c  +  OCD_Add_On_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Final_Transfer_Price__c</fullName>
        <description>Final Transfer Price to the Distributor</description>
        <label>Final Transfer Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Floor_PCT__c</fullName>
        <label>Floor %</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_IDN_Member_Account_Name__c</fullName>
        <formula>OCD_IDN_Quote_Item__r.REVVY__Quote__r.REVVY__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IDN Member Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_IDN_Quote_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IDN Quote Item</label>
        <referenceTo>REVVY__MnQuoteItem__c</referenceTo>
        <relationshipLabel>Quote Line Items (IDN Quote Item)</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OCD_LOB__c</fullName>
        <formula>TEXT( REVVY__Catalog_Node__r.LOB__c )</formula>
        <label>LOB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_List_Price_Override__c</fullName>
        <label>List Price Override</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Managed_Service_Fee__c</fullName>
        <label>Managed Service Fee</label>
        <precision>10</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Margin__c</fullName>
        <description>Margin for Distributor based on Final End User Price</description>
        <label>Margin</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Mark_Up__c</fullName>
        <description>Mark Up on Standard Transfer Price for Distributor</description>
        <label>Mark Up</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Markup__c</fullName>
        <label>OCD_Markup</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Max_Beh_Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Max Behavioral Disc</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Max_Discount_Allowed__c</fullName>
        <label>OCD Max Discount Allowed</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Max_Vol_Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Max Volume Disc</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Min_Beh_Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OCD Min Beh Disc</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Min_Discounted_Price__c</fullName>
        <label>OCD Min Discounted Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Min_Vol_Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OCD Min Vol Disc</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Name_Misc__c</fullName>
        <label>Name Misc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Name_Override__c</fullName>
        <formula>IF( ISBLANK( OCD_Name_Misc__c ) ,   REVVY__Catalog_Node__r.REVVY__LocaleName_F__c , OCD_Name_Misc__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_No_Add_On__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this Checkbox has a check mark for any reagent, then that reagent is not considered for Add on costs.</description>
        <label>No Add On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCD_Original_Override_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Original Override Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Original_Unit_Price__c</fullName>
        <label>Original Unit Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Other_Add_On__c</fullName>
        <description>Other Add On</description>
        <label>Other Add On</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Overridden_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Final Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>As Per Quote Type</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Purchase Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OCD_PmtTypeRO__c</fullName>
        <label>PmtTypeRO</label>
        <picklist>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OCD_Pr_Conversion_Factor_F__c</fullName>
        <formula>OCD_Pr_Conversion_Factor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Pr_Conversion_Factor__c</fullName>
        <formula>REVVY__Catalog_Node__r.Pricing_Conversion_Factor__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Conversion Factor</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Price_Floor__c</fullName>
        <label>Price Floor</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Price_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCD_Price_Violation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Price Violation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCD_Pricing_Info__c</fullName>
        <defaultValue>&quot;Deductions:&quot;</defaultValue>
        <label>Pricing Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OCD_Product_Group__c</fullName>
        <formula>REVVY__Catalog_Node__r.Group_Test_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OCD Product Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Product_LOB__c</fullName>
        <label>Product Line of Business</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Product_Type__c</fullName>
        <formula>TEXT( REVVY__Catalog_Node__r.Product_Type__c )</formula>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Reagent_Base_Price__c</fullName>
        <description>Reagent Base Price = Final Price * (Usage Volume)/(Patient Volume)</description>
        <label>Reagent Base Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_SKU__c</fullName>
        <formula>IF( ISBLANK( Local_SKU_Id__c ) ,  REVVY__Product_ID_F__c , Local_SKU_Id__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Service_Add_On__c</fullName>
        <description>Service Add On</description>
        <label>Service Add On</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Site_Index__c</fullName>
        <label>Site Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Standard_Transfer_Price__c</fullName>
        <description>Standard Transfer Price to Distributor determined from Distributor Price Plan</description>
        <label>Standard Transfer Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Term_Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OCD Term Disc</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Total_Price__c</fullName>
        <description>Total Price including sub-lines</description>
        <formula>REVVY__One_Time_Extended_Price_F__c *  REVVY__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Trade_In_Value__c</fullName>
        <label>OCD Trade In Value</label>
        <summarizedField>REVVY__MnQuoteItemSubLine__c.OCD_Line_Trade_In_Value__c</summarizedField>
        <summaryForeignKey>REVVY__MnQuoteItemSubLine__c.REVVY__QuoteItem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OCD_Unit_Price_With_Package__c</fullName>
        <description>Unit Price with Package add on price is any</description>
        <label>Unit Price With Package</label>
        <summarizedField>REVVY__MnQuoteItemSubLine__c.REVVY__Extended_Price_F__c</summarizedField>
        <summaryFilterItems>
            <field>REVVY__MnQuoteItemSubLine__c.Product_Type__c</field>
            <operation>equals</operation>
            <value>Equipment</value>
        </summaryFilterItems>
        <summaryForeignKey>REVVY__MnQuoteItemSubLine__c.REVVY__QuoteItem__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OCD_Volume_Discount_Id__c</fullName>
        <label>OCD Volume Discount Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Volume_Discount_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OCD Volume Discount Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Type_Field__c</fullName>
        <label>Product Type Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC_Runs_Week__c</fullName>
        <label>QC Runs/Week</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REVVY__Adjustment1Absolute__c</fullName>
        <description>Absolute value of Adjustment 1</description>
        <inlineHelpText>Absolute value of Adjustment 1</inlineHelpText>
        <label>Mark-up (Abs)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__Adjustment1Type__c</fullName>
        <description>Determines whether the Adjustment 1 is based on percentage  (e.g., 20%) or on an absolute amount (e.g., $100).</description>
        <inlineHelpText>Determines whether the Adjustment 1 is based on percentage  (e.g., 20%) or on an absolute amount(e.g., $100).</inlineHelpText>
        <label>Mark-up Type</label>
        <picklist>
            <picklistValues>
                <fullName>Percent</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Absolute</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REVVY__Adjustment1__c</fullName>
        <description>Percent value of Adjustment 1</description>
        <inlineHelpText>Percent value of Adjustment 1</inlineHelpText>
        <label>Mark-up (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__AdjustmentRuleMapping__c</fullName>
        <description>JSON representation of the quote item adjustment rule mapping in quote model.</description>
        <inlineHelpText>JSON representation of the quote item adjustment rule mapping in quote model. Useful for debugging quote level pricing rules.</inlineHelpText>
        <label>Adjustment Rule Mapping Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>REVVY__AdjustmentRuleReason__c</fullName>
        <description>JSON representation of the quote item adjustment rule reason in quote model.</description>
        <inlineHelpText>JSON representation of the quote item adjustment rule reason in quote model. Useful for debugging quote level pricing rules.</inlineHelpText>
        <label>Adjustment Rule Reason Json</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>REVVY__AllAdjustmentRules__c</fullName>
        <description>All adjustment rule applied to this quote item, copied from quote model.</description>
        <inlineHelpText>All adjustment rule applied to this quote item, copied from quote model..</inlineHelpText>
        <label>All Adjustment Rules</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>REVVY__AllPricingRules__c</fullName>
        <description>All pricing rule applied to this quote item, copied from quote model.</description>
        <inlineHelpText>All pricing rule applied to this quote item, copied from quote model..</inlineHelpText>
        <label>All Pricing Rules</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>REVVY__AutoDiscountAbsolute__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Auto discount off of list price (e.g., $100 off), calculated by adjustment rules.</description>
        <inlineHelpText>Auto discount off of list price with manual adjustment (e.g., $100 off auto discount + $100 manual so total $200), calculated by adjustment rules.</inlineHelpText>
        <label>Auto Discount (Abs)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REVVY__AutoDiscountReason__c</fullName>
        <description>Auto discount reason based on which rule sets the auto discount.</description>
        <inlineHelpText>Auto discount label based on which rule sets the auto discount.</inlineHelpText>
        <label>Auto Discount Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__AutoDiscountType__c</fullName>
        <description>Determines whether the auto discount is based on percentage off (e.g., 20% off) or on an absolute amount off (e.g., $100 off).</description>
        <inlineHelpText>Determines whether the auto discount is based on percentage off (e.g., 20% off) or on an absolute amount off (e.g., $100 off).</inlineHelpText>
        <label>Auto Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Absolute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percent</fullName>
                <default>true</default>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REVVY__AutoDiscount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Percentage auto discount off of list price (e.g., 20% off), calculated by adjustment rules.</description>
        <inlineHelpText>Percentage auto discount off of list price (e.g., 20% off), calculated by adjustment rules.</inlineHelpText>
        <label>Auto Discount (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>REVVY__Billing_Frequency_WF__c</fullName>
        <description>Whether the product is charged on a recurring basis. A product can be charged one-time, weekly, monthly, or yearly.</description>
        <inlineHelpText>Whether the product is charged on a recurring basis. A product can be charged one-time, weekly, monthly, or yearly.</inlineHelpText>
        <label>Billing Frequency</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__Catalog_Node__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Unique ID of the product associated with this quote item.</description>
        <inlineHelpText>Unique ID of the product associated with this quote item.</inlineHelpText>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>REVVY__MnCatalogNode__c.REVVY__Type__c</field>
                <operation>equals</operation>
                <value>Product</value>
            </filterItems>
            <filterItems>
                <field>REVVY__MnCatalogNode__c.REVVY__Type__c</field>
                <operation>equals</operation>
                <value>Bundle</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>REVVY__MnCatalogNode__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>QuoteItems</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__ConfigitMainItemId__c</fullName>
        <description>Unique Configit quote ID.</description>
        <inlineHelpText>Configit Quote ID for this record.</inlineHelpText>
        <label>Configit Main ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__ConfigitQuoteId_F__c</fullName>
        <formula>REVVY__Quote__r.REVVY__ConfigitId__c</formula>
        <label>Configit Quote ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__ConfigitQuoteItemId__c</fullName>
        <description>Unique Configit quote item ID.</description>
        <inlineHelpText>Configit Quote item ID for this record.</inlineHelpText>
        <label>Configit Quote Item ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>REVVY__ContractDiscount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Percentage discount off of list price (e.g., 20% off).</description>
        <inlineHelpText>Percentage discount off of list price (e.g., 20% off).</inlineHelpText>
        <label>Contract Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>